# .github

./: ci.yml  pyproject.toml
actions/lint/: action.yml
actions/test/: action.yml
profile/: README.md
